kyy-k8s-config/src/app/website/website-cpa/cpa-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cpa
  name: cpa
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: cpa
